# example-liquidity-layer

./: .gitignore  .gitmodules  Makefile  README.md  SOLVER.md  package-lock.json  package.json  tsconfig.json
solana/: .gitignore  .prettierignore  .prettierrc.json  Anchor.toml  Cargo.toml  Makefile  README.md  clippy.toml  package-lock.json  package.json  tsconfig.anchor.json  tsconfig.cjs.json  tsconfig.json
solana/cfg/testnet/: samle.relayer.json  sample.config.json  sample.relay_finalized_transfers.json
solana/modules/common/: Cargo.toml
solana/modules/common/src/: burn_and_publish.rs  lib.rs
solana/modules/common/src/admin/: cpi.rs  mod.rs
solana/modules/common/src/constants/: mod.rs  usdc.rs
solana/modules/common/src/messages/: fast_fill.rs  fast_market_order.rs  fill.rs  mod.rs
solana/modules/liquidity-layer-messages/: Cargo.toml
solana/modules/liquidity-layer-messages/src/: fast_fill.rs  fast_market_order.rs  fill.rs  lib.rs  slow_order_response.rs  types.rs
solana/modules/matching-engine-testing/: Cargo.toml
solana/modules/matching-engine-testing/src/: lib.rs
solana/modules/matching-engine-testing/tests/: README.md  integration_tests.rs  mod.rs
solana/modules/matching-engine-testing/tests/fixtures/: lut.json  usdt_mint.json
solana/modules/matching-engine-testing/tests/shimful/: README.md  fast_market_order_shim.rs  mod.rs  post_message.rs  shims_execute_order.rs  shims_make_offer.rs  shims_prepare_order_response.rs  shims_settle_auction_none_cctp.rs  verify_shim.rs
solana/modules/matching-engine-testing/tests/shimless/: README.md  execute_order.rs  initialize.rs  make_offer.rs  mod.rs  pause_custodian.rs  prepare_order_response.rs  settle_auction.rs  settle_auction_none_cctp.rs
solana/modules/matching-engine-testing/tests/test_scenarios/: create_and_close_fast_market_order.rs  execute_order.rs  happy_path.rs  initialise_and_misc.rs  initialize_and_misc.rs  make_offer.rs  mod.rs  prepare_order.rs  settle_auction.rs
solana/modules/matching-engine-testing/tests/testing_engine/: config.rs  engine.rs  mod.rs  (+2 more)
solana/modules/ownable-tools/: Cargo.toml
solana/modules/ownable-tools/src/: lib.rs
solana/modules/shared-consts/: Cargo.toml
solana/modules/shared-consts/src/: usdc.rs
solana/modules/token-router-sdk/: Cargo.toml
solana/modules/token-router-sdk/src/: lib.rs
solana/modules/wormhole-matching-engine-api/: Cargo.toml
solana/modules/wormhole-matching-engine-api/src/: instructions.rs  lib.rs
solana/programs/matching-engine/: Cargo.toml  README.md
solana/programs/matching-engine/src/: cctp_mint_recipient.rs  constants.rs  custody_token.rs  error.rs  lib.rs
solana/programs/matching-engine/tests/: README.md  initialize_integration_tests.rs  integration_tests.rs
solana/programs/token-router/: Cargo.toml  README.md
solana/programs/token-router/src/: cctp_mint_recipient.rs  constants.rs  custody_token.rs  error.rs  lib.rs  messages.rs
solana/programs/upgrade-manager/: Cargo.toml  README.md
solana/programs/upgrade-manager/src/: error.rs  lib.rs
solana/sh/: kill_test_validator.sh  run_anchor_test.sh  run_anchor_test_upgrade.sh  run_test_validator.sh
solana/ts/auction-participant/containers/: CachedBlockhash.ts  OfferToken.ts  index.ts
solana/ts/auction-participant/executeOffer/: app.ts
solana/ts/auction-participant/executeOrder/: app.ts
solana/ts/auction-participant/improveOffer/: app.ts  callback.ts
solana/ts/auction-participant/utils/: config.ts  index.ts  placeInitialOffer.ts  preparePostVaaTx.ts  sendTx.ts  settleAuction.ts  sourceTxHash.ts
solana/ts/auction-participant/vaaAuctionRelayer/: app.ts
solana/ts/scripts/: confirm_ownership_transfer_request.ts  createAddressLookup.ts  createUsdcAta.ts  create_ata.ts  dedupeVaaExample.ts  deregister_token.ts  enactNewTestnetAuctionConfig.ts  executeFastOrder.ts  getMainnetInfo.ts  getTestnetInfo.ts  initialize.ts  proposeTestnetAuctionParameters.ts  register_foreign_contracts.ts  register_tokens.ts  setUpMatchingEngineLut.ts  setUpTestnetMatchingEngine.ts  setUpTestnetTokenRouter.ts  set_pause_for_transfer.ts  set_relayer_fees.ts  submit_ownership_transfer_request.ts  updateTestnetAuctionParameters.ts  update_fee_assistant.ts  update_owner_assistant.ts  update_token_info.ts  upgradeMainnet.ts  upgradeTestnet.ts
solana/ts/scripts/helpers/: consts.ts  utils.ts
solana/ts/scripts/improveAuctionOfferAndExecute/: AuctionParticipant.ts  app.ts  callback.ts  index.ts  maybeUseful.ts
solana/ts/scripts/relayFinalizedTransfers/: app.ts  index.ts
solana/ts/scripts/startAuction/: app.ts
solana/ts/scripts/test/: complete_transfer_with_relay.ts  transfer_tokens_with_relay.ts
solana/ts/scripts/utils/: config.ts  expiringList.ts  index.ts  placeInitialOffer.ts  preparePostVaaTx.ts  sendTx.ts  settleAuction.ts
solana/ts/scripts/vaaAuctionRelayer/: app.ts
solana/ts/src/: index.ts  messages.ts  utils.ts
solana/ts/src/cctp/: messages.ts
solana/ts/src/common/: index.ts
solana/ts/src/idl/: index.ts
solana/ts/src/instructions/: completeNativeTransferWithRelay.ts  index.ts
solana/ts/src/matchingEngine/: index.ts  pdas.ts  types.ts
solana/ts/src/matching_engine/: index.ts
solana/ts/src/messages/: deposit.ts  index.ts
solana/ts/src/protocol/: index.ts  matchingEngine.ts  tokenRouter.ts
solana/ts/src/state/: Custodian.ts  PayerSequence.ts  RouterEndpoint.ts
solana/ts/src/testing/: consts.ts  mock.ts  utils.ts
solana/ts/src/tokenRouter/: index.ts  types.ts
solana/ts/src/upgradeManager/: index.ts
solana/ts/src/wormhole/: index.ts  spy.ts
solana/ts/src/wormholeCctp/: consts.ts  index.ts  messages.ts
solana/ts/tests/: 01__matchingEngine.ts  01__tokenRouter.ts  02__matchingEngine.ts  02__tokenRouter.ts  04__interaction.ts  12__testnetFork.ts
solana/ts/tests/accounts/: usdc_mint.json  usdc_payer_token.json
solana/ts/tests/helpers/: consts.ts  index.ts  matching_engine_utils.ts  mock.ts  utils.ts
universal/rs/: Cargo.toml  rust-toolchain.toml
universal/rs/messages/: Cargo.toml
universal/rs/messages/src/: fast_fill.rs  fast_market_order.rs  lib.rs
(+678 files in other folders)
