[package]
name = "matching-engine-testing"
edition.workspace = true
version.workspace = true
authors.workspace = true
license.workspace = true
homepage.workspace = true
repository.workspace = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[features]
mainnet = ["matching-engine/mainnet", "common/mainnet"]
testnet = ["matching-engine/testnet", "common/testnet"]
localnet = ["matching-engine/localnet", "common/localnet"]
integration-test = ["localnet"]

[dev-dependencies]
matching-engine.workspace = true
hex-literal.workspace = true
wormhole-io.workspace = true
common.workspace = true
wormhole-solana-utils.workspace = true

anchor-lang = { workspace = true, features = ["event-cpi", "init-if-needed"] }
anchor-spl.workspace = true
solana-program.workspace = true

hex.workspace = true
bytemuck.workspace = true
ruint.workspace = true
cfg-if.workspace = true
wormhole-svm-definitions.workspace = true
wormhole-svm-shim.workspace = true

solana-program-test = "1.18.15"
solana-sdk = "1.18.15"
serde_json = "1.0.138"
bincode = "1.3.3"
solana-cli-output = "1.18.15"
base64 = "0.22.1"
lazy_static = "1.4.0"
bs58 = "0.5.0"
serde = { version = "1.0.212", features = ["derive"] }
secp256k1 = {version = "0.30.0", features = ["rand", "hashes", "std", "global-context", "recovery"] }
num-traits = "0.2.16"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
tracing-log = "0.2.0"
once_cell = "1.8"
anyhow = "1.0.97"

[lints.clippy]
correctness = { priority = -1, level = "warn"}
inconsistent_digit_grouping = "allow"

### See clippy.toml.
unnecessary_lazy_evaluations = "allow"
or_fun_call = "warn"

arithmetic_side_effects = "allow"
as_conversions = "allow"
cast_abs_to_unsigned = "allow"
cast_lossless= "allow"
cast_possible_truncation = "allow"
cast_possible_wrap = "allow"
cast_precision_loss = "deny"
cast_sign_loss = "deny"
eq_op = "deny"
expect_used = "deny"
float_cmp = "deny"
integer_division = "allow"
large_futures = "deny"
large_stack_arrays = "deny"
large_stack_frames = "deny"
lossy_float_literal = "deny"
manual_slice_size_calculation = "deny"
modulo_one = "deny"
out_of_bounds_indexing = "deny"
overflow_check_conditional = "deny"
panic = "allow"
recursive_format_impl = "deny"
todo = "allow"
unchecked_duration_subtraction = "allow"
unreachable = "deny"

