[package]
name = "ownable-tools"
edition.workspace = true
version.workspace = true
authors.workspace = true
license.workspace = true
homepage.workspace = true
repository.workspace = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[features]
default = ["assistant"]
assistant = []

[dependencies]
anchor-lang.workspace = true
solana-program.workspace = true