[package]
name = "shared-consts"
edition.workspace = true
version.workspace = true
authors.workspace = true
license.workspace = true
homepage.workspace = true
repository.workspace = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[features]
testnet = []
mainnet = []

[dependencies]
anchor-lang.workspace = true
cfg-if.workspace = true