[package]
name = "wormhole-matching-engine-api"
edition.workspace = true
version.workspace = true
authors.workspace = true
license.workspace = true
homepage.workspace = true
repository.workspace = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
wormhole-svm-definitions.workspace = true
bytemuck.workspace = true
anchor-spl.workspace = true
anchor-lang = { workspace = true, features = ["event-cpi", "init-if-needed"] }
solana-program.workspace = true
common.workspace = true


[lints]
workspace = true

