[package]
name = "matching-engine"
version = "0.0.0"
description = "Example Matching Engine Program"
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]

[features]
default = ["testnet", "no-idl"]
no-entrypoint = []
no-idl = []
no-log-ix-name = []
cpi = ["no-entrypoint"]
testnet = ["wormhole-cctp-solana/testnet"]
integration-test = ["testnet"]

[dependencies]
wormhole-cctp-solana = { workspace = true, features = ["cpi"] }
anchor-lang.workspace = true
anchor-spl.workspace = true
solana-program.workspace = true
hex.workspace = true
ruint.workspace = true
cfg-if.workspace = true

[dev-dependencies]
hex-literal.workspace = true