[package]
name = "matching-engine"
description = "Example Matching Engine Program"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
homepage.workspace = true
repository.workspace = true

[lib]
crate-type = ["cdylib", "lib"]

[features]
default = ["no-idl"]
no-entrypoint = []
no-idl = []
no-log-ix-name = []
cpi = ["no-entrypoint"]
mainnet = ["common/mainnet"]
testnet = ["common/testnet"]
localnet = ["common/localnet"]
integration-test = ["localnet"]
idl-build = [
    "localnet",
    "common/idl-build",
    "anchor-lang/idl-build",
    "anchor-spl/idl-build"
]

[dependencies]
common.workspace = true
wormhole-solana-utils.workspace = true

anchor-lang = { workspace = true, features = ["event-cpi", "init-if-needed"] }
anchor-spl.workspace = true
solana-program.workspace = true

hex.workspace = true
bytemuck.workspace = true
ruint.workspace = true
cfg-if.workspace = true
wormhole-svm-definitions.workspace = true
wormhole-svm-shim.workspace = true
wormhole-io.workspace = true

[dev-dependencies]
hex-literal.workspace = true
solana-program-test = "1.18.15"
solana-sdk = "1.18.15"
serde_json = "1.0.138"
bincode = "1.3.3"
solana-cli-output = "1.18.15"
base64 = "0.22.1"
lazy_static = "1.4.0"
bs58 = "0.5.0"
serde = { version = "1.0.212", features = ["derive"] }
secp256k1 = {version = "0.30.0", features = ["rand", "hashes", "std", "global-context", "recovery"] }
num-traits = "0.2.16"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
tracing-log = "0.2.0"
once_cell = "1.8"
wormhole-svm-shim.workspace = true
wormhole-svm-definitions.workspace = true

[lints]
workspace = true
