[package]
name = "token-router"
version = "0.0.0"
description = "Example Token Router Program"
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]

[features]
default = ["testnet", "no-idl"]
no-entrypoint = []
no-idl = []
no-log-ix-name = []
cpi = ["no-entrypoint"]
testnet = ["wormhole-cctp-solana/testnet"]
integration-test = ["testnet"]

[dependencies]
wormhole-cctp-solana = { workspace = true, features = ["cpi"] }
wormhole-io.workspace = true

anchor-lang.workspace = true
anchor-spl.workspace = true
solana-program.workspace = true

hex.workspace = true
ruint.workspace = true
cfg-if.workspace = true

ahash.workspace = true

[dev-dependencies]
hex-literal.workspace = true