[package]
name = "token-router"
description = "Example Token Router Program"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
homepage.workspace = true
repository.workspace = true

[lib]
crate-type = ["cdylib", "lib"]

[features]
default = ["testnet", "no-idl"]
no-entrypoint = []
no-idl = []
no-log-ix-name = []
cpi = ["no-entrypoint"]
testnet = ["common/testnet", "wormhole-cctp-solana/testnet"]
integration-test = ["testnet"]

[dependencies]
common.workspace = true
matching-engine.workspace = true
wormhole-cctp-solana = { workspace = true, features = ["cpi"] }

anchor-lang = { workspace = true, features = ["derive", "init-if-needed"] }
anchor-spl.workspace = true
solana-program.workspace = true

hex.workspace = true
ruint.workspace = true
cfg-if.workspace = true

ahash.workspace = true

[dev-dependencies]
hex-literal.workspace = true