[package]
name = "token-router"
description = "Example Token Router Program"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
homepage.workspace = true
repository.workspace = true

[lib]
crate-type = ["cdylib", "lib"]

[features]
default = ["no-idl"]
no-entrypoint = []
no-idl = []
no-log-ix-name = []
cpi = ["no-entrypoint"]
mainnet = [
    "common/mainnet",
    "matching-engine/mainnet"
]
testnet = [
    "common/testnet",
    "matching-engine/testnet"
]
localnet = [
    "common/localnet",
    "matching-engine/localnet"
]
integration-test = ["localnet"]
idl-build = [
    "localnet",
    "common/idl-build",
    "matching-engine/idl-build",
    "anchor-lang/idl-build",
    "anchor-spl/idl-build"
]

[dependencies]
common.workspace = true
matching-engine = { workspace = true, features = ["cpi"] }
wormhole-solana-utils.workspace = true

anchor-lang = { workspace = true, features = ["derive", "init-if-needed"] }
anchor-spl.workspace = true
solana-program.workspace = true

hex.workspace = true
ruint.workspace = true
cfg-if.workspace = true

[dev-dependencies]
hex-literal.workspace = true

[lints]
workspace = true