[package]
name = "liquidity-layer-messages"
edition.workspace = true
version.workspace = true
authors.workspace = true
license.workspace = true
homepage.workspace = true
repository.workspace = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
wormhole-io.workspace = true
wormhole-raw-vaas.workspace = true

[dev-dependencies]
hex-literal.workspace = true

[lints]
workspace = true
